[workspace]
members = [
    "programs/luum_core",
    "libs/luum_math",
    "cli",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.17.0"
borsh = "0.10.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
